# Depone

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SECURITY.md  SKILL.md  pyproject.toml
agents/: openai.yaml
depone/: __init__.py  __main__.py
docs/: README.md  a2-lite-observer-capture.md  automation-roadmap.md  command-reference.md  depone-agent-team-system-operating-contract.md  depone-cloud-team-control.md  depone-next-work-plan.md  evidence-run-signing-spec.md  github-research.md  keelplane-gate-precision-redesign.md  keelplane-research-codex-path-spec.md  moonweave-engine-boundary.md  orro-engine-contract-v0.md  orro-proofcheck-hardening.md  phase2-tcb-extraction.md  release-history.md  spec.md  uid-observer-launched-a2-spec.md  uid-observer-launched-a2.md  v0.5-decision.md  v0.5-plan-schema-evaluator-spec.md  v1-decision.md  v10-decision.md  v101-decision.md  v101-promotion-route-spec.md  v102-decision.md  v102-live-proof-1-spec.md  v104-product-direction-spec.md  v105-decision.md  v105-verify-wedge-spec.md  v107-agent-fabric-control-plane-spec.md  v12-to-v20-final-roadmap.md  v126-decision.md  v126-paired-dogfood-evidence-spec.md  v127-decision.md  v127-verify-claim-honesty-spec.md  v128-decision.md  v128-evidence-substrate-spec.md  v13-dwm-runner-mvp-spec.md  v15-decision.md  (+75 more)
packaging/: dwm-benchmarks.json  dwm-package.json
references/: workflow-patterns.md
scripts/: check_contract.py  check_orro_engine_contract.py  check_readme_quality.py  check_release_text.py  check_whitespace.py  compile_workflow.py  dispatch_frontier.py  dispatch_worker.py  dwm.py  (+43 more)
(+326 files in other folders)
